[package]
name = "netstat_continuous"
version = "0.1.0"
edition = "2021"
path = "src/main.rs"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Maximize size reduction
panic = 'abort'     # Remove panic unwinding to reduce size
strip = true        # Strip symbols from binary

[dependencies]
netstat2 = "0.11"
chrono = "0.4"
